--- a/quienes.html
+++ b/quienes.html
@@ -28,8 +28,12 @@
                 <a class="nav-link" href="./configurador.html">Configurador</a>
                 <a class="nav-link" href="./componentes.html">Componentes</a>
                 <a class="nav-link" href="./perifericos.html">Perifericos</a>
-                <a class="nav-link" href="./quienes.html">Quienes Somos</a>
+                <a class="nav-link active" href="./quienes.html">Quienes Somos</a>
                 <a class="nav-link" href="./contacto.html">Contacto</a>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Buscando..." aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
               </div>
             </div>
           </div>
@@ -42,7 +46,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="presentacion-main text-uppercase">Quienes Somos</h1>
+                <h2 class="presentacion-main text-uppercase">Quienes Somos</h2>
                 <p class="presentacion-sec">Estamos a tu disposición para solucionar cualquiera de tus dudas, 
                     <br>o también puedes revisar el apartado de sugerencias en caso de que alguien ya haya tenido una duda similar.</p>
             </div>
