--- a/componentes.html
+++ b/componentes.html
@@ -35,10 +35,14 @@
             <div class="navbar-nav navbar-textos">
               <a class="nav-link" href="./index.html">Inicio</a>
               <a class="nav-link" href="./configurador.html">Configurador</a>
-              <a class="nav-link" href="./componentes.html">Componentes</a>
+              <a class="nav-link active" href="./componentes.html">Componentes</a>
               <a class="nav-link" href="./perifericos.html">Perifericos</a>
               <a class="nav-link" href="./quienes.html">Quienes Somos</a>
               <a class="nav-link" href="./contacto.html">Contacto</a>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Buscando..." aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Buscar</button>
+              </form>
             </div>
           </div>
         </div>
@@ -51,7 +55,7 @@
       <div class="container">
           <div class="row">
               <div class="col-12">
-                  <h1 class="presentacion-main text-uppercase">Componentes</h1>
+                  <h2 class="presentacion-main text-uppercase">Componentes</h2>
                   <p class="presentacion-sec">Crea tu equipo a tu medida, 
                       <br>seleccionando entre todos nuestros componentes disponibles.</p>
                       <a href="./configurador.html" class="btn btn-lg btn-inicio" role="button">Configurador</a>
