--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="./assets/styles.css" rel="stylesheet" />
-    <title></title>
+    <title>PC Piezas</title>
   </head>
   <body>
     <!-----------------NavBar-------------------->
@@ -25,12 +25,16 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
               <div class="navbar-nav navbar-textos">
-                <a class="nav-link" href="./index.html">Inicio</a>
+                <a class="nav-link active" href="./index.html">Inicio</a>
                 <a class="nav-link" href="./configurador.html">Configurador</a>
                 <a class="nav-link" href="./componentes.html">Componentes</a>
                 <a class="nav-link" href="./perifericos.html">Perifericos</a>
                 <a class="nav-link" href="./quienes.html">Quienes Somos</a>
                 <a class="nav-link" href="./contacto.html">Contacto</a>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Buscando..." aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
               </div>
             </div>
           </div>
@@ -43,7 +47,7 @@
       <div class="container-fluid" data-aos="fade-up">
         <div class="row justify-content-center" id="cabecera">
           <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h1 class="titular text-uppercase">Computer Parts</h1>
+            <h1 class="titular text-uppercase">PC Piezas</h1>
             <h2>Diseña</h2>
             <div class="boton-inicio">
             <a href="./configurador.html" class="btn btn-lg btn-inicio" role="button">Configurador</a>
